--- a/src/stylesheets/5-components/_cards.scss
+++ b/src/stylesheets/5-components/_cards.scss
@@ -37,3 +37,12 @@
         }
     }
 }
+
+@media (max-width: $screen-sm-max) {
+    .do-card{
+        &.sm-full{
+            max-width: 100%;
+            margin-right: 0px;
+        }
+    }
+}
