--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -78,6 +78,12 @@
             }
         }
     }
+    .sets{
+        display: none;
+        &.active{
+            display: block;
+        }
+    }
 }
 // Step heading 
 .do-step-heading{
@@ -92,6 +98,9 @@
         line-height: 24px;
         // flex:1;
         pointer-events: none;
+        >.step-link.hide{
+            display: none;
+        }
         &.clickable{
             cursor: pointer;
             pointer-events: all;
@@ -103,13 +112,16 @@
         height: 24px;
     }
 }
-.reward-sub-text{
+.step-sub-text{
     display: block;
     font: $font-regular;
     font-size: 10px;    
     color: $gold;
      &.grey{
-         color: $light-grey;
+         color: #d5d5ea;
+     }
+     &.hide{
+         display: none;
      }
 }
 // step status 
