added all versions of html

--- a/src/stylesheets/1-helpers/_variables.scss
+++ b/src/stylesheets/1-helpers/_variables.scss
@@ -32,7 +32,7 @@ $brand-color: #00b1f2;
 $brand-purple: #2a2988;
 /// Light grey
 /// @type Color
-$light-grey: #eeeeee;
+$light-grey: #dadada;
 
 /// Medium grey
 /// @type Color
