--- a/src/stylesheets/5-components/_form.scss
+++ b/src/stylesheets/5-components/_form.scss
@@ -80,6 +80,9 @@ input[type=number]::-webkit-outer-spin-button {
 .space-top-30{
   margin-top: 30px;
 }
+.space-top-20{
+  margin-top: 20px;
+}
 
 /* Inputs */
 .do-input-group{
