--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -270,7 +270,7 @@
         font: $font-regular;
         // font-size: 12px;
         line-height: 20px;
-        color: #666666;
+        color: $mid-grey;
         margin-right: auto;
     }
 }
@@ -316,8 +316,8 @@
     position: absolute;
     font-size: 10px;
     width: 78px;
-    right: 15px;
-    top: 71px;
+    right: 21px;
+    top: 76px;
     left:auto;
     color: #f74747;
 }
