new changes integration

--- a/src/stylesheets/3-base/_typography.scss
+++ b/src/stylesheets/3-base/_typography.scss
@@ -21,9 +21,12 @@ a,a:hover{
 
 }
 .do-subtext{
-  font-size: 10px;
+  font-size: 12px;
   color: $mid-grey;
   // text-align: center;
+  &.black{
+    color: $text-color;
+  }
 }
 .do-text{
   font-size: 14px;
