--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -9,6 +9,21 @@
     padding: 60px 0px;
     // overflow-x: hidden;
 }
+.do-step-counter{
+    position: absolute;
+    z-index: 1;
+    top: 35px;
+    font-size: 10px;
+    color: #d5d5ea;
+    left: 0;
+}
+// inner styling for hiding
+.do-inner-hidden{
+    display: none;
+    &.show{
+        display: inherit;
+    }
+}
 // Step status styling
 .do-step-container{
     align-items: flex-start;
@@ -22,8 +37,8 @@
                 background-color: $mid-grey;
             }
             ~.do-step-arrow{
-                // opacity: 1;
-                // color: $mid-grey;
+                opacity: 1;
+                color: $mid-grey;
             }
         }
         .do-step-heading{
@@ -231,6 +246,11 @@
     p{
         font: $font-regular;
         line-height: 20px;
+        margin-bottom: 14px;
+        margin-top: 0;
+        &.space-top{
+            margin-top: 14px;
+        }
         &.do-text12{
             font: $font-regular;
             font-size: 12px;
@@ -296,6 +316,18 @@
         line-height: 20px;
         color: $mid-grey;
         margin-right: auto;
+    }
+    .query-box{
+        border: 1px solid #dadada;
+        padding: 10px;
+        width: 180px;
+        display: flex;
+        align-items: center;
+        margin-right: 20px;
+        img{
+            width: 33px;
+            margin-right: 20px;
+        }
     }
 }
 .payment-options{
@@ -394,7 +426,7 @@
         left: unset;
     }
     .do-steps-container{
-        padding: 60px 10px;
+        padding: 60px 0px;
     }
     .do-step-container{
         border: none;
@@ -414,20 +446,24 @@
         }
         &.done{
             border: none;
-            border-top: 1px solid $light-grey;
+            // border-top: 1px solid $light-grey;
+            border-bottom: 1px solid $light-grey;
             border-radius: 0px;
             &.active{
-                border: 1px solid $light-grey;
+                // border: 1px solid $light-grey;
             }
         }
         &.in-progress{
-            border: 1px solid $light-grey;
-            padding: 30px 15px;
-            border-radius: 4px; 
+            // border: 1px solid $light-grey;
+            padding: 30px 0px;
+            // border-radius: 4px; 
         }
     }
     .do-step-heading{
         margin-bottom: 0px;
+        .do-step-heading-text{
+            font-size: 20px;
+        }
     }
     .do-step-body{
         position: relative;
@@ -440,7 +476,7 @@
         display: none;
         padding-top: 30px;
         padding-bottom: 0px;
-        max-width: 380px;
+        // max-width: 380px;
         margin: auto;
         .section-col-5,.section-col-3,.section-col-full,.section-col-4{
             width: 100%;
