--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -76,6 +76,14 @@
         // }
     }
     &.done{
+        // .do-step-body{
+        //     opacity: 1;
+        //     z-index: 2;
+        //     transition: 1s;
+        // }
+        // &.active{
+        //     z-index: 2;            
+        // }
         .do-step-status{
             .done{
                 opacity: 1;
@@ -107,10 +115,13 @@
             }
         }
         .do-step-body{
-                opacity: 1;
-                z-index: 1;
-                transition: 1s;
-                transform: translateX(0);
+            opacity: 1;
+            z-index: 1;
+            transition: transform 1s;
+            -webkit-transform: translateX(0);
+            transform: translateX(0);
+            transition-property: opacity,transform;
+            transition-delay: 0s,0s;
             &.hidden{
                 z-index: 0;
                 opacity: 0;
@@ -218,6 +229,8 @@
     transition-delay: 1s;
     z-index: 0;
     // opacity: 0;
+    transition-property: opacity,transform;
+    transition-delay: 1s,1s;
     transform: translateX(calc(100% + 30px));
 
     background: #fff;
