--- a/src/stylesheets/4-layout/_grid.scss
+++ b/src/stylesheets/4-layout/_grid.scss
@@ -248,6 +248,7 @@
     .offset-11 {
       margin-left: 91.666667%;
     }
+    
 }
 @media (min-width: $screen-lg-min) {
     .col-lg {
@@ -322,5 +323,41 @@
       -ms-flex: 0 0 100%;
       flex: 0 0 100%;
       max-width: 100%;
+    }
+    .offset-lg-0 {
+      margin-left: 0;
+    }
+    .offset-lg-1 {
+      margin-left: 8.333333%;
+    }
+    .offset-lg-2 {
+      margin-left: 16.666667%;
+    }
+    .offset-lg-3 {
+      margin-left: 25%;
+    }
+    .offset-lg-4 {
+      margin-left: 33.333333%;
+    }
+    .offset-lg-5 {
+      margin-left: 41.666667%;
+    }
+    .offset-lg-6 {
+      margin-left: 50%;
+    }
+    .offset-lg-7 {
+      margin-left: 58.333333%;
+    }
+    .offset-lg-8 {
+      margin-left: 66.666667%;
+    }
+    .offset-lg-9 {
+      margin-left: 75%;
+    }
+    .offset-lg-10 {
+      margin-left: 83.333333%;
+    }
+    .offset-lg-11 {
+      margin-left: 91.666667%;
     }
 }
