--- a/src/stylesheets/6-templates/_offers.scss
+++ b/src/stylesheets/6-templates/_offers.scss
@@ -1,3 +1,8 @@
 .offers-box{
     padding-bottom: 100px;
 }
+@media (max-width: $screen-sm-max) {
+    .offers-box{
+        padding-bottom: 20px;
+    }
+}
