--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -122,6 +122,10 @@
             transform: translateX(0);
             transition-property: opacity,transform;
             transition-delay: 0s,0s;
+            overflow-y: scroll;
+            overflow-y: overlay;
+            height: calc(100vh - 300px);
+            min-height: unset;
             &.hidden{
                 z-index: 0;
                 opacity: 0;
@@ -223,7 +227,6 @@
     width: calc(66.666667% + 13px);
     max-width: unset;
     left: 0px;
-    min-height: 580px;
     padding-bottom: 60px;
     transition: 0s;
     transition-delay: 1s;
@@ -232,9 +235,11 @@
     transition-property: opacity,transform;
     transition-delay: 1s,1s;
     transform: translateX(calc(100% + 30px));
-
     background: #fff;
     margin-left: calc(33.33% - 3px);
+    min-height: 580px;
+    height: 0px;
+    padding-right: 40px;
     &.hidden{
         z-index: 0;
         opacity: 0;
@@ -301,6 +306,25 @@
         width: 100%;
     }
 }
+
+.do-step-body::-webkit-scrollbar-track
+{
+	// -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #d5d5ea;
+}
+
+.do-step-body::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #d5d5ea;
+    border-radius: 16px;
+}
+
+.do-step-body::-webkit-scrollbar-thumb
+{
+    background-color: $mid-grey;
+    border-radius: 16px;    
+}
 .payment-options-container{
     justify-content: space-between;
     flex-wrap: wrap;
@@ -315,13 +339,15 @@
     width: 100vw;
     z-index: 99;
     left: 0px;
-    padding: 30px 30px;
-    display: none;
+    padding: 20px 20px;
+    display: flex;
+    transition: .5s;
+    transform: translateY(100%);
     .bottom-box-container{
         width: 100%;
     }
     &.show{
-        display: flex;
+    transform: translateY(0%);        
     }
     span{
         font: $font-regular;
