--- a/src/stylesheets/5-components/_cards.scss
+++ b/src/stylesheets/5-components/_cards.scss
@@ -1,6 +1,7 @@
 .do-card{
     border-radius: 2px;
-    box-shadow: 1px 2px 6px 0 rgba(213, 213, 234, 0.81);
+    border: solid 1px #f2f2fd;
+    // box-shadow: 1px 2px 6px 0 rgba(213, 213, 234, 0.81);
     background-color: #ffffff;
     padding: 20px;
     text-align: left;
