--- a/src/stylesheets/6-templates/_offers.scss
+++ b/src/stylesheets/6-templates/_offers.scss
@@ -1,5 +1,10 @@
 .offers-box{
     padding-bottom: 100px;
+    .do-text{
+        height: 100px;
+        line-height: 20px;
+        overflow: hidden;
+    }
 }
 @media (max-width: $screen-sm-max) {
     .offers-box{
