--- a/src/stylesheets/5-components/_cards.scss
+++ b/src/stylesheets/5-components/_cards.scss
@@ -1,7 +1,8 @@
 .do-card{
     border-radius: 2px;
-    border: solid 1px #f2f2fd;
+    // border: solid 1px #f2f2fd;
     // box-shadow: 1px 2px 6px 0 rgba(213, 213, 234, 0.81);
+    box-shadow: 0px 0px 0px 1px #d5d5ea inset;
     background-color: #ffffff;
     padding: 20px;
     text-align: left;
