--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -2,7 +2,9 @@
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
 
-
+.do-body-container{
+    padding-bottom: 100px;
+}
 /* CSS for Steps */
 .do-steps-container{
     position: relative;
@@ -124,8 +126,9 @@
             transition-delay: 0s,0s;
             overflow-y: scroll;
             overflow-y: overlay;
-            height: calc(100vh - 300px);
-            min-height: unset;
+            // height: 100%;
+            // min-height: unset;
+            padding-right: 5px;
             &.hidden{
                 z-index: 0;
                 opacity: 0;
@@ -237,9 +240,11 @@
     transform: translateX(calc(100% + 30px));
     background: #fff;
     margin-left: calc(33.33% - 3px);
-    min-height: 580px;
-    height: 0px;
-    padding-right: 40px;
+    height: 100vh;
+    max-height: calc(100vh - 372px);
+    min-height: 450px;
+    overflow-y: scroll;
+    overflow-y: overlay;
     &.hidden{
         z-index: 0;
         opacity: 0;
