--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -431,6 +431,9 @@
   padding: 24px 20px;
 }
 @media (max-width: $screen-sm-max) {
+    #body-do-confirmation{
+        padding-bottom: 0px;
+    }
 .e-call-card{
     height: auto;
     width: 100%;
@@ -488,7 +491,7 @@
         border: none;
         border-top: 1px solid #f2f2fd;
         
-        padding: 30px 0px;
+        padding: 40px 10px;
         border-radius: 0px; 
         width: 100vw;
         margin-left: -20px;
@@ -519,6 +522,9 @@
             // padding: 30px 0px;
             // border-radius: 4px; 
         }
+        &:last-child{
+            border-bottom: 1px solid #f2f2fd;
+        }
     }
     .do-step-heading{
         margin-bottom: 0px;
@@ -535,8 +541,9 @@
         min-height: unset;
         height: auto;
         display: none;
-        padding-top: 30px;
-        padding-bottom: 0px;
+        // padding-top: 30px;
+        // padding-bottom: 0px;
+        padding: 30px 10px 0px 10px;
         // max-width: 380px;
         margin: auto;
         min-height: unset;
@@ -553,6 +560,7 @@
         &.active{
             display: block;
             opacity: 1;
+            padding: 30px 10px 0px 10px;
         }
         .do-step-body-title{
             display: none;
