--- a/src/stylesheets/5-components/_modal.scss
+++ b/src/stylesheets/5-components/_modal.scss
@@ -123,6 +123,7 @@
                 }
                 .modal-padding-wrapper{
                     padding: 40px 20px;
+                    background:#fff;
                 }
         }
         .modal-footer{
