--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -505,6 +505,7 @@
             .do-step-body{
                 opacity: 1;
                 display: block;
+                padding-right: 10px;
                 &.hidden{
                     display: none;
                     opacity: 1;
